--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -20,16 +20,24 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - 
+        name: Checkout
+        uses: actions/checkout@v2
+      - 
+        name: Login to ACR
+        uses: docker/login-action@v1.8.0
+        with:
+          # Server address of Docker registry. If not set then will default to Docker Hub
+          registry: ${{ secrets.ACR_NAME }}
+          # Username used to log against the Docker registry
+          username: ${{ secrets.ACR_LOGIN }}
+          # Password or personal access token used to log against the Docker registry
+          password: ${{ secrets.ACR_PASSWORD }}
+          # Log out from the Docker registry at the end of a job
+          logout: true # optional, default is true
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      - name: Build and push staging image
+      - 
+        name: Build and push Docker images
         # You may pin to the exact commit or the version.
         # uses: docker/build-push-action@4a531fa5a603bab87dfa56578bd82b28508c9547
         uses: docker/build-push-action@v2.2.2
-        with:
-          username: ${{ secrets.ACR_LOGIN }}
-          password: ${{ secrets.ACR_PASSWORD }}
-          registry: ${{ secrets.ACR_NAME }}
-          repository: contoso-website
-          tags: latest
