--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -20,21 +20,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - 
-        name: Checkout
-        uses: actions/checkout@v2
-      - 
-        name: Login to ACR
-        uses: docker/login-action@v1.8.0
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.1.1
+      - name: Azure Container Registry Login
+        uses: Azure/docker-login@v1
         with:
           # Server address of Docker registry. If not set then will default to Docker Hub
-          registry: ${{ secrets.ACR_NAME }}
+          login-server: ${{ secrets.ACR_NAME }}
           # Username used to log against the Docker registry
           username: ${{ secrets.ACR_LOGIN }}
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.ACR_PASSWORD }}
-          # Log out from the Docker registry at the end of a job
-          logout: true # optional, default is true
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - 
         name: Build and push Docker images
