--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -22,8 +22,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1.1.1
+        
       - name: Azure Container Registry Login
         uses: Azure/docker-login@v1
         with:
@@ -33,9 +35,14 @@ jobs:
           username: ${{ secrets.ACR_LOGIN }}
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.ACR_PASSWORD }}
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - 
-        name: Build and push Docker images
+      - run: |
+          docker build . -t ${{ secrets.ACR_NAME }}/contoso-website:latest
+          docker push ${{ secrets.ACR_NAME }}/contoso-website:latest
+
+      #- name: Build and push Docker images
         # You may pin to the exact commit or the version.
         # uses: docker/build-push-action@4a531fa5a603bab87dfa56578bd82b28508c9547
-        uses: docker/build-push-action@v2.2.2
+      #  uses: docker/build-push-action@v2.2.2
+      #  with:
+      #    push: true  
+      #    tags: latest 
