--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -35,14 +35,11 @@ jobs:
           username: ${{ secrets.ACR_LOGIN }}
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.ACR_PASSWORD }}
-      - run: |
-          docker build . -t ${{ secrets.ACR_NAME }}/contoso-website:latest
-          docker push ${{ secrets.ACR_NAME }}/contoso-website:latest
 
-      #- name: Build and push Docker images
+      - name: Build and push Docker images
         # You may pin to the exact commit or the version.
         # uses: docker/build-push-action@4a531fa5a603bab87dfa56578bd82b28508c9547
-      #  uses: docker/build-push-action@v2.2.2
-      #  with:
-      #    push: true  
-      #    tags: latest 
+        uses: docker/build-push-action@v2.2.2
+        with:
+          push: true  
+          tags: ${{ secrets.ACR_NAME }}/contoso-website:latest 
